Refactoring code, fixing bugs and adding tests descriptions to validate the progress-item component

--- a/my-progress-trail/my-progress-trail/src/index.html
+++ b/my-progress-trail/my-progress-trail/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <mpt-root>Loading...</mpt-root>
+  <mpt-app>Loading...</mpt-app>
 </body>
 </html>
